--- a/frontend/src/components/FilmGrid/FilmGrid.css
+++ b/frontend/src/components/FilmGrid/FilmGrid.css
@@ -7,12 +7,23 @@
     background-color: #d7d7d7;
     width: 100%;
     padding: 3vh;
+    overflow-y: auto;
 }
 
 .filmgrid-wrapper {
     margin: 5% 5%;
+    width: 100%;
+    height: 100%;
 }
 
 .searchFeedback {
     color: black;
+}
+
+.movieList {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    height: 100%;
+    gap: 10px;
+    justify-items: center;
 }
